--- a/article-getter/article.css
+++ b/article-getter/article.css
@@ -11,14 +11,16 @@ body{
 article{
     border: 1px solid gainsboro;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    height: 7rem;
+    gap: 1rem; 
     text-overflow: ellipsis;
     overflow: hidden;
     border-radius: .3rem;
     padding: 0.3rem;
+
+}
+
+article:hover{
+    background: gainsboro;
 }
 
 .image{
@@ -32,4 +34,9 @@ article{
     display: grid;
     grid-template-columns: repeat(1,1fr);
     gap: 1em;
+ }
+
+ a{
+    text-decoration: none;
+    color: black;
  }
